responsive on mobile fix

--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -153,7 +153,7 @@ footer {
 /*------------------@media--------------------------------*/
 @media(max-width: 500px) {
   .length-control {
-    width: 100%; 
+    width: 180px; 
     display: block; 
   }
 
